@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.568.2.40 2010/12/05 00:01:23 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.568.2.41 2011/03/26 02:39:24 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -9219,10 +9219,15 @@ Ffigure_mapcontours
  algorithm to the 4x4 grid of data points in script `demo/pm3d.dem` (please have
  a look) produces only (4-1)x(4-1)=9 colored rectangles.
 
- Another drawing algorithm, which would draw quadrangles around a given node
- by taking corners from averaged (x,y)-coordinates of its surrounding 4 nodes
- while using node's color, could be implemented in the future. This is already
- done for drawing images (2D grids) via `image` and `rgbimage` styles.
+ `4 columns of data (x,y,z,color)`:
+ If a fourth column of data is provided, it is normally interpreted as a 
+ separate palette-mapped gray value. The coloring of individual quadrangles
+ works as above, except that the color value is distinct from the z value.
+ As a separate coloring option, the fourth data column may provide instead
+ an RGB color. See `rgbcolor variable`. In this case the plotting command
+ must be
+
+       splot ... using 1:2:3:4 with pm3d lc rgb variable
 
  Notice that ranges of z-values and color-values for surfaces are adjustable
  independently by `set zrange`, `set cbrange`, as well as `set log` for z or
